# pydantic_ai_demos

./: .env_example  .gitignore  1_find_the_industry.ipynb  1_structure.ipynb  2_tool calls and unit tests.ipynb  LICENSE.md  README.md  e1_structure.ipynb  e2_tool call.ipynb  e2_tool calls and unit tests.ipynb  e3_call_with_tool.py  e3_call_with_tool_test.py  e3_example_for_tests.py  e3_example_function_model_test.py  e3_example_test.py  e4_using_evals.ipynb  main.py  pyproject.toml
data/: capitals_dataset.yaml  capitals_dataset_schema.json  capitals_wikipedia.csv
